[workspace]
resolver = "2"

members = [
  "capture",
  "capture-server"
]

[profile.release]
debug = 2  # https://www.polarsignals.com/docs/rust

[workspace.dependencies]
assert-json-diff = "2.0.2"
axum = "0.6.15"
axum-client-ip = "0.4.1"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
governor = {version = "0.5.1", features=["dashmap"]}
tower_governor = "0.0.4"
time = { version = "0.3.20", features = ["formatting", "macros", "parsing", "serde"] }
tower-http = { version = "0.4.0", features = ["cors", "trace"] }
bytes = "1"
anyhow = "1.0"
flate2 = "1.0"
base64 = "0.21.1"
uuid = { version = "1.3.3", features = ["serde"] }
async-trait = "0.1.68"
serde_urlencoded = "0.7.1"
rand = "0.8.5"
rdkafka = { version = "0.36.0", features = ["cmake-build", "ssl"] }
metrics = "0.21.1"
metrics-exporter-prometheus = "0.12.1"
thiserror = "1.0.48"
envconfig = "0.10.0"
