[workspace]
resolver = "2"

members = ["hook-common", "hook-api", "hook-worker", "hook-janitor"]

[workspace.dependencies]
async-trait = "0.1.74"
axum = { version = "0.7.1", features = ["http2"] }
chrono = { version = "0.4" }
envconfig = "0.10.0"
eyre = "0.6.9"
futures = { version = "0.3.29" }
http = { version = "0.2" }
http-body-util = "0.1.0"
metrics = "0.22.0"
metrics-exporter-prometheus = "0.13.0"
rdkafka = { version = "0.35.0", features = ["cmake-build", "ssl", "tracing"] }
reqwest = { version = "0.11" }
regex = "1.10.2"
serde = { version = "1.0" }
serde_derive = { version = "1.0" }
serde_json = { version = "1.0" }
sqlx = { version = "0.7", features = [
  "chrono",
  "json",
  "migrate",
  "postgres",
  "runtime-tokio",
  "tls-native-tls",
  "uuid",
] }
time = { version = "0.3.20" }
thiserror = { version = "1.0" }
tokio = { version = "1.34.0", features = ["full"] }
tower = "0.4.13"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = { version = "2.5.0 " }
uuid = { version = "1.6.1", features = ["v7", "serde"] }
