[workspace]
resolver = "2"

members = [
  "capture",
  "capture-server",
  "hook-common",
  "hook-api",
  "hook-worker",
  "hook-janitor",
]

[profile.release]
debug = 2 # https://www.polarsignals.com/docs/rust

[workspace.dependencies]
anyhow = "1.0"
assert-json-diff = "2.0.2"
async-trait = "0.1.74"
axum = { version = "0.7.1", features = ["http2"] }
axum-client-ip = "0.4.1"
base64 = "0.21.1"
bytes = "1"
chrono = { version = "0.4" }
envconfig = "0.10.0"
eyre = "0.6.9"
flate2 = "1.0"
futures = { version = "0.3.29" }
governor = { version = "0.5.1", features = ["dashmap"] }
http = { version = "0.2" }
http-body-util = "0.1.0"
metrics = "0.22.0"
metrics-exporter-prometheus = "0.13.0"
rand = "0.8.5"
rdkafka = { version = "0.36.0", features = ["cmake-build", "ssl", "tracing"] }
regex = "1.10.2"
reqwest = { version = "0.11" }
serde = { version = "1.0", features = ["derive"] }
serde_derive = { version = "1.0" }
serde_json = { version = "1.0" }
serde_urlencoded = "0.7.1"
sqlx = { version = "0.7", features = [
  "chrono",
  "json",
  "migrate",
  "postgres",
  "runtime-tokio",
  "tls-native-tls",
  "uuid",
] }
thiserror = { version = "1.0" }
time = { version = "0.3.20", features = [
  "formatting",
  "macros",
  "parsing",
  "serde",
] }
tokio = { version = "1.34.0", features = ["full"] }
tower = "0.4.13"
tower_governor = "0.0.4"
tower-http = { version = "0.4.0", features = ["cors", "trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = { version = "2.5.0 " }
uuid = { version = "1.6.1", features = ["v7", "serde"] }
